# AICommit

./: .gitignore  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
docs/: demo.cast
src/aicommit/: __init__.py  __main__.py  cli.py  config.py  diff.py  git.py  prompts.py  ui.py
src/aicommit/commands/: __init__.py  changelog.py  config.py  review.py
src/aicommit/llm/: __init__.py  llama_cpp.py  ollama.py
tests/: conftest.py  test_changelog.py  test_cli.py  test_config.py  test_config_cmd.py  test_diff.py  test_ollama.py  test_prompts.py  test_review.py
tests/fixtures/transcripts/: changelog_mixed.json  commit_regenerate.json  commit_simple.json  review_clean.json  review_findings.json
