[project]
name = "aicommit"
version = "0.1.0"
description = "AI commit messages from your local LLM"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "yumiaura" }]
keywords = ["git", "commit", "llm", "ollama", "conventional-commits"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = []

[project.scripts]
aicommit = "aicommit.cli:main"
git-aicommit = "aicommit.cli:main"

[project.urls]
Homepage = "https://github.com/yumiaura/aicommit"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aicommit"]
