[project]
name = "aicommit"
version = "1.0.0"
description = "AI commit messages from your local LLM"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "yumiaura" }]
keywords = ["git", "commit", "llm", "ollama", "conventional-commits"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = []

[project.optional-dependencies]
llama-cpp = ["llama-cpp-python>=0.2.0"]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
    "mypy>=1.8",
]

[project.scripts]
aicommit = "aicommit.cli:main"
git-aicommit = "aicommit.cli:main"

[project.urls]
Homepage   = "https://github.com/yumiaura/AICommit"
Source     = "https://github.com/yumiaura/AICommit"
Issues     = "https://github.com/yumiaura/AICommit/issues"
Changelog  = "https://github.com/yumiaura/AICommit/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aicommit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["build", "dist", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]
ignore = [
    "E501",  # line length already governed above; long URLs in prompts are fine
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]  # asserts are fine in tests

[tool.mypy]
python_version = "3.11"
strict_optional = true
warn_unused_ignores = true
ignore_missing_imports = true
files = ["src/aicommit"]
